--- a/documentation/admin/app/index.html
+++ b/documentation/admin/app/index.html
@@ -70,13 +70,29 @@
 
   <ul class="link-list">
   
-    <li><a href="./Admin.html">Admin</a>
+    <li><a href="./Admin/Bitcoupon/Api/BackendRequest.html">Admin::Bitcoupon::Api::BackendRequest</a>
+  
+    <li><a href="./Admin/Bitcoupon/CouponResult.html">Admin::Bitcoupon::CouponResult</a>
   
     <li><a href="./Admin/CouponsController.html">Admin::CouponsController</a>
   
     <li><a href="./ApplicationController.html">ApplicationController</a>
   
     <li><a href="./ApplicationHelper.html">ApplicationHelper</a>
+  
+    <li><a href="./Coupon.html">Coupon</a>
+  
+    <li><a href="./Creation.html">Creation</a>
+  
+    <li><a href="./Input.html">Input</a>
+  
+    <li><a href="./Output.html">Output</a>
+  
+    <li><a href="./Transaction.html">Transaction</a>
+  
+    <li><a href="./TransactionsController.html">TransactionsController</a>
+  
+    <li><a href="./TransactionsHelper.html">TransactionsHelper</a>
   
     <li><a href="./User.html">User</a>
   
