--- a/documentation/backend/app/Input.html
+++ b/documentation/backend/app/Input.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>class ApplicationController - Rails Application Documentation</title>
+<title>class Input - Rails Application Documentation</title>
 
 <link href="./fonts.css" rel="stylesheet">
 <link href="./rdoc.css" rel="stylesheet">
@@ -61,7 +61,7 @@
   <h3>Parent</h3>
 
   
-  <p class="link">ActionController::Base
+  <p class="link">ActiveRecord::Base
   
 </div>
 
@@ -71,9 +71,9 @@
   </div>
 </nav>
 
-<main role="main" aria-labelledby="class-ApplicationController">
-  <h1 id="class-ApplicationController" class="class">
-    class ApplicationController
+<main role="main" aria-labelledby="class-Input">
+  <h1 id="class-Input" class="class">
+    class Input
   </h1>
 
   <section class="description">
