--- a/documentation/backend/app/index.html
+++ b/documentation/backend/app/index.html
@@ -78,7 +78,19 @@
   
     <li><a href="./Backend/CouponsController.html">Backend::CouponsController</a>
   
+    <li><a href="./Backend/TransactionsController.html">Backend::TransactionsController</a>
+  
     <li><a href="./Coupon.html">Coupon</a>
+  
+    <li><a href="./Creation.html">Creation</a>
+  
+    <li><a href="./Input.html">Input</a>
+  
+    <li><a href="./Output.html">Output</a>
+  
+    <li><a href="./Transaction.html">Transaction</a>
+  
+    <li><a href="./TransactionsHelper.html">TransactionsHelper</a>
   
   </ul>
 </div>
