--- a/documentation/backend/app/table_of_contents.html
+++ b/documentation/backend/app/table_of_contents.html
@@ -52,7 +52,25 @@
     <a href="Backend/CouponsController.html">Backend::CouponsController</a>
   </li>
   <li class="class">
+    <a href="Backend/TransactionsController.html">Backend::TransactionsController</a>
+  </li>
+  <li class="class">
     <a href="Coupon.html">Coupon</a>
+  </li>
+  <li class="class">
+    <a href="Creation.html">Creation</a>
+  </li>
+  <li class="class">
+    <a href="Input.html">Input</a>
+  </li>
+  <li class="class">
+    <a href="Output.html">Output</a>
+  </li>
+  <li class="class">
+    <a href="Transaction.html">Transaction</a>
+  </li>
+  <li class="module">
+    <a href="TransactionsHelper.html">TransactionsHelper</a>
   </li>
 </ul>
 
@@ -65,7 +83,27 @@
     <span class="container">Backend::CouponsController</span>
 
   <li class="method">
+    <a href="Backend/TransactionsController.html#method-i-creator_public_key">#creator_public_key</a>
+    &mdash;
+    <span class="container">Backend::TransactionsController</span>
+
+  <li class="method">
+    <a href="Backend/CouponsController.html#method-i-destroy">#destroy</a>
+    &mdash;
+    <span class="container">Backend::CouponsController</span>
+
+  <li class="method">
+    <a href="Backend/TransactionsController.html#method-i-history">#history</a>
+    &mdash;
+    <span class="container">Backend::TransactionsController</span>
+
+  <li class="method">
     <a href="Backend/CouponsController.html#method-i-index">#index</a>
+    &mdash;
+    <span class="container">Backend::CouponsController</span>
+
+  <li class="method">
+    <a href="Backend/CouponsController.html#method-i-new">#new</a>
     &mdash;
     <span class="container">Backend::CouponsController</span>
 
@@ -73,6 +111,11 @@
     <a href="Backend/CouponsController.html#method-i-show">#show</a>
     &mdash;
     <span class="container">Backend::CouponsController</span>
+
+  <li class="method">
+    <a href="Backend/TransactionsController.html#method-i-verify">#verify</a>
+    &mdash;
+    <span class="container">Backend::TransactionsController</span>
 </ul>
 </main>
 
