--- a/documentation/admin/app/index.html
+++ b/documentation/admin/app/index.html
@@ -70,6 +70,8 @@
 
   <ul class="link-list">
   
+    <li><a href="./Admin.html">Admin</a>
+  
     <li><a href="./Admin/Bitcoupon/Api/BackendRequest.html">Admin::Bitcoupon::Api::BackendRequest</a>
   
     <li><a href="./Admin/Bitcoupon/CouponResult.html">Admin::Bitcoupon::CouponResult</a>
