--- a/documentation/admin/app/table_of_contents.html
+++ b/documentation/admin/app/table_of_contents.html
@@ -39,6 +39,9 @@
 
 <h2 id="classes">Classes and Modules</h2>
 <ul>
+  <li class="module">
+    <a href="Admin.html">Admin</a>
+  </li>
   <li class="class">
     <a href="Admin/Bitcoupon/Api/BackendRequest.html">Admin::Bitcoupon::Api::BackendRequest</a>
   </li>
