--- a/documentation/backend/app/index.html
+++ b/documentation/backend/app/index.html
@@ -80,6 +80,8 @@
   
     <li><a href="./Backend/TransactionsController.html">Backend::TransactionsController</a>
   
+    <li><a href="./Bitcoupon/Api/BitcoinCall.html">Bitcoupon::Api::BitcoinCall</a>
+  
     <li><a href="./Coupon.html">Coupon</a>
   
     <li><a href="./Creation.html">Creation</a>
