--- a/documentation/backend/app/table_of_contents.html
+++ b/documentation/backend/app/table_of_contents.html
@@ -55,6 +55,9 @@
     <a href="Backend/TransactionsController.html">Backend::TransactionsController</a>
   </li>
   <li class="class">
+    <a href="Bitcoupon/Api/BitcoinCall.html">Bitcoupon::Api::BitcoinCall</a>
+  </li>
+  <li class="class">
     <a href="Coupon.html">Coupon</a>
   </li>
   <li class="class">
@@ -78,12 +81,57 @@
 <ul>
 
   <li class="method">
+    <a href="Transaction.html#method-c-creation_hash">::creation_hash</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="Transaction.html#method-c-from_json">::from_json</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="Transaction.html#method-c-history">::history</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="Transaction.html#method-c-input_hash">::input_hash</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="Bitcoupon/Api/BitcoinCall.html#method-c-new">::new</a>
+    &mdash;
+    <span class="container">Bitcoupon::Api::BitcoinCall</span>
+
+  <li class="method">
+    <a href="Transaction.html#method-c-output_hash">::output_hash</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="Transaction.html#method-c-transaction_hash">::transaction_hash</a>
+    &mdash;
+    <span class="container">Transaction</span>
+
+  <li class="method">
+    <a href="ApplicationController.html#method-i-bitcoin">#bitcoin</a>
+    &mdash;
+    <span class="container">ApplicationController</span>
+
+  <li class="method">
     <a href="Backend/CouponsController.html#method-i-create">#create</a>
     &mdash;
     <span class="container">Backend::CouponsController</span>
 
   <li class="method">
-    <a href="Backend/TransactionsController.html#method-i-creator_public_key">#creator_public_key</a>
+    <a href="Bitcoupon/Api/BitcoinCall.html#method-i-creator_addresses">#creator_addresses</a>
+    &mdash;
+    <span class="container">Bitcoupon::Api::BitcoinCall</span>
+
+  <li class="method">
+    <a href="Backend/TransactionsController.html#method-i-creator_addresses">#creator_addresses</a>
     &mdash;
     <span class="container">Backend::TransactionsController</span>
 
@@ -103,11 +151,6 @@
     <span class="container">Backend::CouponsController</span>
 
   <li class="method">
-    <a href="Backend/CouponsController.html#method-i-new">#new</a>
-    &mdash;
-    <span class="container">Backend::CouponsController</span>
-
-  <li class="method">
     <a href="Backend/CouponsController.html#method-i-show">#show</a>
     &mdash;
     <span class="container">Backend::CouponsController</span>
@@ -116,6 +159,11 @@
     <a href="Backend/TransactionsController.html#method-i-verify">#verify</a>
     &mdash;
     <span class="container">Backend::TransactionsController</span>
+
+  <li class="method">
+    <a href="Bitcoupon/Api/BitcoinCall.html#method-i-verify_transaction">#verify_transaction</a>
+    &mdash;
+    <span class="container">Bitcoupon::Api::BitcoinCall</span>
 </ul>
 </main>
 
